# cli-plotting-talk

./: .gitignore  Justfile  LICENSE  README.md  cities.csv  presentation.css  presentation.py  pyproject.toml  qr.txt
examples/: spurious_correlations.py  wheel.py
presentation/: talk.html  talk.md  tweaks.css
slides/: colours.md  colours1.py  colours2.py  colours_rich.py  final.md  hello.py  hello2.py  kitty.py  libraries.md  neo.md  neo.py  neo.txt  physt_heatmap.py  plotext_hist.py  plotext_lines.py  plotille_hist.py  plotille_line.py  references.md  simple_bar.py  simple_bar_color.py  simple_bar_unicode.py  simple_scatter.py  title.md
